--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "method-override": "^2.3.10"
   },
   "devDependencies": {
     "nodemon": "^1.12.4"
